--- a/portfolio.css
+++ b/portfolio.css
@@ -3,7 +3,7 @@
     background-color:#ADD8E6;
     color:white;
     font-size:20px;
-    align-items:center;
+    display: flex;
 }
 .headshot{
     width:20%;
@@ -24,4 +24,11 @@
 }
 li{
     display:inline;
+}
+
+#aboutMe{
+    margin-right: 50px;
+}
+#myWork{
+    margin-left: 50px;
 }
